# asciitest

./: .gitignore  CMakeLists.txt  DOC-example.asciidoc.txt  EXAMPLE-DOC-example.asciidoc.txt  README.md  example.cpp
asciitest/: CMakeLists.txt  asciitest-cmake_helpers.py  asciitest.py  cmake2xunit.py  cmake2xunit.xsl  env_run.py
asciitest/CMakeModules/: FindAsciidoc.cmake
asciitest/asciitest-filter/: asciitest-filter.conf  asciitest-filter.py
asciitest/asciitest_filter/: asciitest_filter.conf  asciitest_filter.py
asciitest_config/: asciidoc_template-python-2.txt  asciidoc_template-python-3-special_test.txt  asciidoc_template-python-4-special_test.txt
